# baselib

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  array.h  assert.h  error.cc  exception.h  exceptions.cc  exceptions.h  fmt.h  library.json  math.h  mem.h  os.h  panic.cc  str.h  strconv.h  sync.h  varint.h
async/: async.cc  async.h
debug/: debug.cc  debug.h
fmt/: fmt.cc  fmt.inlines.h  isprint.cc  isprint.h  quote.cc
io/: BUILD.gn  utils.h
lib/: BUILD.py  array.h  assert.h  async.h  base.h  bitflag.h  buffer.h  concepts.h  debug.h  error.cc  error.h  exception.cc  exceptions.cc  exceptions.h  flag.h  fs.h  inline_string.h  io.h  mem.cc  mem.h  panic.cc  panic.h  print.h  str.cc  str.h  sync.h  testing.h  type_id.h  types.h  unicode.h  utf8.h  utils.h
lib/debug/: BUILD.py  debug.cc  debug.h
lib/errors/: errors.cc  errors.h  example_test.cc  join.cc  join.h  join_test.cc
lib/filepath/: path.cc  path.h
lib/flag/: flag.cc  flag.h
lib/fmt/: BUILD.gn  fmt.cc  fmt.h  fmt.inlines.h  fmt_test.cc  isprint.cc  isprint.h  quote.cc  quote.h
lib/fs/: fs.cc  fs.h
lib/io/: io.cc  io.h  io_stream.cc  io_stream.h  io_stream_test.cc  io_test.cc  pipe.cc  pipe.h  pipe_test.cc  util.cc  util.h  utils.cc  utils.h
lib/math/: bits.h  math.h  matrix.h
lib/os/: error.cc  error.h  file.cc  file.h  file_posix.cc  file_posix.h  pipe.cc  pipe.h  stat.cc  stat.h  stdio.cc  stdio.h  stdio_arduino.cc  stdio_posix.cc  types.h
lib/reflect/: deepequal.cc  reflect.cc
lib/runtime/: debug.cc  debug.h  mstats.cc  mstats.h  symtab.h
lib/serial/: serial.h  serial_linux.cc  serial_linux.h  serial_listener.cc  serial_listener.h
lib/strconv/: BUILD.py  atoi.cc  atoi.h  atoi_test.cc  ftoa.cc  ftoa.h  ftoa_test.cc  ftoaryu.h  isprint.cc  isprint.h  itoa.cc  itoa.h  itoa_test.cc  quote.cc  quote.h  quote_test.cc
lib/strings/: 2way.cc  2way.h  2way_test.cc  strings.cc  strings.h  strings_test.cc
lib/sync/: atomic.h  bench1.cc  chan.cc  chan.h  chan_lockreduced.cc  chan_lockreduced.h  chan_test.cc  cond.cc  cond.h  gang.cc  gang.h  go.cc  go.h  lock.cc  lock.h  map.h  mutex.cc  mutex.h  notes.txt  once.h  once_test.cc  rwmutex.cc  rwmutex.h  waitgroup.h
lib/testing/: BUILD.py  benchmain.cc  benchmark.cc  benchmark.h  benchmark_test.cc  debug_stub.cc  example.cc  example.h  example_test.cc  func.cc  func.h  fuzz.cc  fuzz.h  matcher.cc  matcher.h  testing.cc  testing.h  testing_test.cc  testmain.cc
lib/time/: time.cc  time.h
lib/unicode/: graphic.cc  graphic.h  letter.cc  letter.h  tables.cc  tables.h  unicode.h
lib/utf8/: codes.h  decode.cc  decode.h  encode.cc  encode.h  utf8.cc  utf8.h  utf8_test.cc
lib/varint/: varint.cc  varint.h
math/: math.h  matrix.h
os/: BUILD.gn  error.cc  error.h  file.h  pipe.cc
strconv/: atoi.h
sync/: BUILD.gn  go.h  lock.cc  lock.h  mutex.cc  waitgroup.cc
test/: BUILD.gn  main.cc
utf8/: BUILD.gn  decode.h  utf8.cc
varint/: BUILD.gn  varint.cc
