import("//build_overrides/pigweed.gni")
import("$dir_pw_build/target_types.gni")

config("include_path") {
  include_dirs = [ ".." ]
}
pw_source_set("varint") {
    sources = [
        "varint.cc",
    ]
    public = [
       "varint.hh",
    ]
    public_configs = [
        #":include_path"
    ]
    deps = [
       "//sharedlib"
    ]
    public_deps = [
        "//sharedlib"
    ]
}
